# event-pay

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
frontend/event-pay/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/event-pay/src/: Layout.jsx
frontend/event-pay/src/api/: client.js
frontend/event-pay/src/components/payment/: BankTransferPayment.jsx  CardPayment.jsx  CopyButton.jsx  PaymentCard.jsx  UsdtPayment.jsx
frontend/event-pay/src/lib/: AuthContext.jsx  NavigationTracker.jsx  PageNotFound.jsx  app-params.js
frontend/event-pay/src/pages/: Home.jsx
nginx/: nginx.conf
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
src/handlers/: mod.rs  payments.rs  webhooks.rs
src/services/: fienta.rs  mod.rs  telegram.rs
tests/: api_tests.rs
