[package]
name = "event-pay"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (для Telegram и Fienta)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
